fix reflection issues for native image with spatial